# todoist-task-script

./: LICENSE  README.md  pyproject.toml  requirements.txt
samples/: sample.csv  sample.yaml
scripts/: bible.csv
task_script/: __main__.py  constants.py  csv.py  schema.py  util.py  yaml.py
