[tool.poetry]
name = "task-script"
version = "0.1.0"
description = ""
authors = ["Sungchan Yi <calofmijuck@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
todoist-api-python = "^2.1.3"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.py$'
